{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 446,
  "lineage": "257defa8-6390-0cf2-0f81-97a9403621a2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810941123870:internet-gateway/igw-0f16ec7bdfafc320e",
            "id": "igw-0f16ec7bdfafc320e",
            "owner_id": "810941123870",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-0742c6a694106499c"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb1",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810941123870:loadbalancer/app/myalb1/3e53681736b3300d",
            "arn_suffix": "app/myalb1/3e53681736b3300d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-myalb1-467531450.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:810941123870:loadbalancer/app/myalb1/3e53681736b3300d",
            "idle_timeout": 120,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "myalb1",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d6c510f8f2ef827b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06d4536862f5ec04b"
              },
              {
                "subnet_id": "subnet-09f095af0524ade2a"
              }
            ],
            "subnets": [
              "subnet-06d4536862f5ec04b",
              "subnet-09f095af0524ade2a"
            ],
            "tags": {
              "Name": "myalb1",
              "env": "dev"
            },
            "tags_all": {
              "Name": "myalb1",
              "env": "dev"
            },
            "vpc_id": "vpc-0742c6a694106499c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.pri-sub-1.aws_subnet.subnets",
            "module.vpc1.aws_vpc.main",
            "module.vpcepsg.aws_security_group.ec2_security_groups"
          ]
        }
      ]
    },
    {
      "module": "module.alb1_listner",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810941123870:listener/app/myalb1/3e53681736b3300d/693f4a162bb4a1d0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810941123870:targetgroup/alb-target-1/d305037ddbc03734",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:810941123870:listener/app/myalb1/3e53681736b3300d/693f4a162bb4a1d0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810941123870:loadbalancer/app/myalb1/3e53681736b3300d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb1.aws_lb.main",
            "module.alb_tg.aws_lb_target_group.app",
            "module.pri-sub-1.aws_subnet.subnets",
            "module.vpc1.aws_vpc.main",
            "module.vpcepsg.aws_security_group.ec2_security_groups"
          ]
        }
      ]
    },
    {
      "module": "module.alb_tg",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810941123870:targetgroup/alb-target-1/d305037ddbc03734",
            "arn_suffix": "targetgroup/alb-target-1/d305037ddbc03734",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:810941123870:targetgroup/alb-target-1/d305037ddbc03734",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:810941123870:loadbalancer/app/myalb1/3e53681736b3300d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-target-1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0742c6a694106499c"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.endpoint-sub-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810941123870:subnet/subnet-00d2428045cad22e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "20.20.5.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d2428045cad22e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "810941123870",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "endpoint-sub-1",
              "env": "dev"
            },
            "tags_all": {
              "Name": "endpoint-sub-1",
              "env": "dev"
            },
            "vpc_id": "vpc-0742c6a694106499c"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810941123870:subnet/subnet-002b6bf3e7b08b4ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "20.20.5.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002b6bf3e7b08b4ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "810941123870",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "endpoint-sub-2",
              "env": "dev"
            },
            "tags_all": {
              "Name": "endpoint-sub-2",
              "env": "dev"
            },
            "vpc_id": "vpc-0742c6a694106499c"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.igw_route",
      "mode": "managed",
      "type": "aws_route",
      "name": "custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f16ec7bdfafc320e",
            "id": "r-rtb-028bb502945781c751080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-028bb502945781c75",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "module.pub-rt.aws_route_table.rt",
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.pri-rt",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810941123870:route-table/rtb-0c4ff97fec289d928",
            "id": "rtb-0c4ff97fec289d928",
            "owner_id": "810941123870",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0742c6a694106499c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.pri-rt-asso",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cdfd79e781c1a08",
            "route_table_id": "rtb-0c4ff97fec289d928",
            "subnet_id": "subnet-06d4536862f5ec04b"
          },
          "dependencies": [
            "module.pri-rt.aws_route_table.rt",
            "module.pri-sub-1.aws_subnet.subnets",
            "module.vpc1.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b19b4784ba3b9b19",
            "route_table_id": "rtb-0c4ff97fec289d928",
            "subnet_id": "subnet-09f095af0524ade2a"
          },
          "dependencies": [
            "module.pri-rt.aws_route_table.rt",
            "module.pri-sub-1.aws_subnet.subnets",
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.pri-sub-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810941123870:subnet/subnet-06d4536862f5ec04b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "20.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d4536862f5ec04b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "810941123870",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-1",
              "env": "dev"
            },
            "tags_all": {
              "Name": "pri-sub-1",
              "env": "dev"
            },
            "vpc_id": "vpc-0742c6a694106499c"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810941123870:subnet/subnet-09f095af0524ade2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "20.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f095af0524ade2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "810941123870",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-2",
              "env": "dev"
            },
            "tags_all": {
              "Name": "pri-sub-2",
              "env": "dev"
            },
            "vpc_id": "vpc-0742c6a694106499c"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.pub-rt",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810941123870:route-table/rtb-028bb502945781c75",
            "id": "rtb-028bb502945781c75",
            "owner_id": "810941123870",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f16ec7bdfafc320e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0742c6a694106499c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.pub-rt-asso",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b06625a0d6625bc",
            "route_table_id": "rtb-028bb502945781c75",
            "subnet_id": "subnet-0bcaa1bdafc4c60b2"
          },
          "dependencies": [
            "module.pub-rt.aws_route_table.rt",
            "module.pub-sub-1.aws_subnet.subnets",
            "module.vpc1.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a6e3a8ed2d586d3",
            "route_table_id": "rtb-028bb502945781c75",
            "subnet_id": "subnet-05fa8dd007e14313e"
          },
          "dependencies": [
            "module.pub-rt.aws_route_table.rt",
            "module.pub-sub-1.aws_subnet.subnets",
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.pub-sub-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810941123870:subnet/subnet-0bcaa1bdafc4c60b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "20.20.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bcaa1bdafc4c60b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "810941123870",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-sub-1",
              "env": "dev"
            },
            "tags_all": {
              "Name": "pub-sub-1",
              "env": "dev"
            },
            "vpc_id": "vpc-0742c6a694106499c"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810941123870:subnet/subnet-05fa8dd007e14313e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "20.20.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05fa8dd007e14313e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "810941123870",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-sub-2",
              "env": "dev"
            },
            "tags_all": {
              "Name": "pub-sub-2",
              "env": "dev"
            },
            "vpc_id": "vpc-0742c6a694106499c"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.transitgw-sub-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810941123870:subnet/subnet-0ad796981e9d03f42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "20.20.6.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad796981e9d03f42",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "810941123870",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "transitgw-sub-1",
              "env": "dev"
            },
            "tags_all": {
              "Name": "transitgw-sub-1",
              "env": "dev"
            },
            "vpc_id": "vpc-0742c6a694106499c"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810941123870:subnet/subnet-0d2caeb5e2c6fec02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "20.20.6.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2caeb5e2c6fec02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "810941123870",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "transitgw-sub-2",
              "env": "dev"
            },
            "tags_all": {
              "Name": "transitgw-sub-2",
              "env": "dev"
            },
            "vpc_id": "vpc-0742c6a694106499c"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810941123870:vpc/vpc-0742c6a694106499c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.20.0.0/16",
            "default_network_acl_id": "acl-0223a14bca00390d1",
            "default_route_table_id": "rtb-07d9c6e3310f2b6d4",
            "default_security_group_id": "sg-0558b3aa25aaf01b4",
            "dhcp_options_id": "dopt-eb95948c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0742c6a694106499c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07d9c6e3310f2b6d4",
            "owner_id": "810941123870",
            "tags": {
              "Name": "vpc1",
              "env": "dev"
            },
            "tags_all": {
              "Name": "vpc1",
              "env": "dev"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_endpoint_cloudwatch",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "vpc_ep",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810941123870:vpc-endpoint/vpce-0889766093866dac4",
            "dns_entry": [
              {
                "dns_name": "vpce-0889766093866dac4-bxk7m12a.monitoring.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0889766093866dac4-bxk7m12a-ap-southeast-1a.monitoring.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0889766093866dac4-bxk7m12a-ap-southeast-1b.monitoring.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "monitoring.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z07228252ZUY7PNAKHBLW"
              },
              {
                "dns_name": "monitoring.ap-southeast-1.api.aws",
                "hosted_zone_id": "Z100091434XOU91ZS089T"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0889766093866dac4",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-058dd0bcf78565ae1",
              "eni-0f2f5782265465bd6"
            ],
            "owner_id": "810941123870",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d6c510f8f2ef827b"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.monitoring",
            "service_region": "ap-southeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "20.20.5.194",
                "subnet_id": "subnet-002b6bf3e7b08b4ab"
              },
              {
                "ipv4": "20.20.5.65",
                "subnet_id": "subnet-00d2428045cad22e6"
              }
            ],
            "subnet_ids": [
              "subnet-002b6bf3e7b08b4ab",
              "subnet-00d2428045cad22e6"
            ],
            "tags": {
              "Name": "cloudwatch-endpoint"
            },
            "tags_all": {
              "Name": "cloudwatch-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0742c6a694106499c"
          },
          "dependencies": [
            "module.endpoint-sub-1.aws_subnet.subnets",
            "module.vpc1.aws_vpc.main",
            "module.vpcepsg.aws_security_group.ec2_security_groups"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoint_cloudwatch_logs",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "vpc_ep",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810941123870:vpc-endpoint/vpce-0110939277c0c8b04",
            "dns_entry": [
              {
                "dns_name": "vpce-0110939277c0c8b04-tf3sspnw.logs.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0110939277c0c8b04-tf3sspnw-ap-southeast-1a.logs.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0110939277c0c8b04-tf3sspnw-ap-southeast-1b.logs.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "logs.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z07278193VA55BV55JR2X"
              },
              {
                "dns_name": "logs.ap-southeast-1.api.aws",
                "hosted_zone_id": "Z07209593TCML8FM5UN8B"
              },
              {
                "dns_name": "streaming-logs.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z1011839GW04IVWKUVUG"
              },
              {
                "dns_name": "streaming-logs.ap-southeast-1.api.aws",
                "hosted_zone_id": "Z07278232UJ96J7GBPMSX"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0110939277c0c8b04",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02d37ace5841255e4",
              "eni-0e09b2011b1a90107"
            ],
            "owner_id": "810941123870",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d6c510f8f2ef827b"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.logs",
            "service_region": "ap-southeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "20.20.5.254",
                "subnet_id": "subnet-002b6bf3e7b08b4ab"
              },
              {
                "ipv4": "20.20.5.38",
                "subnet_id": "subnet-00d2428045cad22e6"
              }
            ],
            "subnet_ids": [
              "subnet-002b6bf3e7b08b4ab",
              "subnet-00d2428045cad22e6"
            ],
            "tags": {
              "Name": "cloudwatch-log-endpoint"
            },
            "tags_all": {
              "Name": "cloudwatch-log-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0742c6a694106499c"
          },
          "dependencies": [
            "module.endpoint-sub-1.aws_subnet.subnets",
            "module.vpc1.aws_vpc.main",
            "module.vpcepsg.aws_security_group.ec2_security_groups"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoint_ecr_api",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "vpc_ep",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810941123870:vpc-endpoint/vpce-0ebead48f94217e86",
            "dns_entry": [
              {
                "dns_name": "vpce-0ebead48f94217e86-a8gbt4as.api.ecr.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0ebead48f94217e86-a8gbt4as-ap-southeast-1b.api.ecr.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0ebead48f94217e86-a8gbt4as-ap-southeast-1a.api.ecr.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "api.ecr.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z03046453C5OEXC6ZBJ4I"
              },
              {
                "dns_name": "ecr.ap-southeast-1.api.aws",
                "hosted_zone_id": "Z07283047HHWUGSBOVMM"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ebead48f94217e86",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0674782ced991e461",
              "eni-0eeffa661d15722a7"
            ],
            "owner_id": "810941123870",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d6c510f8f2ef827b"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ecr.api",
            "service_region": "ap-southeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "20.20.5.146",
                "subnet_id": "subnet-002b6bf3e7b08b4ab"
              },
              {
                "ipv4": "20.20.5.54",
                "subnet_id": "subnet-00d2428045cad22e6"
              }
            ],
            "subnet_ids": [
              "subnet-002b6bf3e7b08b4ab",
              "subnet-00d2428045cad22e6"
            ],
            "tags": {
              "Name": "ecr-api-endpoint"
            },
            "tags_all": {
              "Name": "ecr-api-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0742c6a694106499c"
          },
          "dependencies": [
            "module.endpoint-sub-1.aws_subnet.subnets",
            "module.vpc1.aws_vpc.main",
            "module.vpcepsg.aws_security_group.ec2_security_groups"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoint_ecr_dkr",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "vpc_ep",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810941123870:vpc-endpoint/vpce-0897319429fe78f18",
            "dns_entry": [
              {
                "dns_name": "vpce-0897319429fe78f18-3rw8lqs2.dkr.ecr.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0897319429fe78f18-3rw8lqs2-ap-southeast-1a.dkr.ecr.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0897319429fe78f18-3rw8lqs2-ap-southeast-1b.dkr.ecr.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "dkr.ecr.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z03055413RF5YHOP6PIL0"
              },
              {
                "dns_name": "*.dkr.ecr.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z03055413RF5YHOP6PIL0"
              },
              {
                "dns_name": "dkr-ecr.ap-southeast-1.on.aws",
                "hosted_zone_id": "Z07234346U2D56FF4O59"
              },
              {
                "dns_name": "*.dkr-ecr.ap-southeast-1.on.aws",
                "hosted_zone_id": "Z07234346U2D56FF4O59"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0897319429fe78f18",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-08ca728fbe0767cb9",
              "eni-0ef5a42eff9d167e4"
            ],
            "owner_id": "810941123870",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d6c510f8f2ef827b"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ecr.dkr",
            "service_region": "ap-southeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "20.20.5.102",
                "subnet_id": "subnet-00d2428045cad22e6"
              },
              {
                "ipv4": "20.20.5.252",
                "subnet_id": "subnet-002b6bf3e7b08b4ab"
              }
            ],
            "subnet_ids": [
              "subnet-002b6bf3e7b08b4ab",
              "subnet-00d2428045cad22e6"
            ],
            "tags": {
              "Name": "ecr-dkr-endpoint"
            },
            "tags_all": {
              "Name": "ecr-dkr-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0742c6a694106499c"
          },
          "dependencies": [
            "module.endpoint-sub-1.aws_subnet.subnets",
            "module.vpc1.aws_vpc.main",
            "module.vpcepsg.aws_security_group.ec2_security_groups"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoint_s3_gateway",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810941123870:vpc-endpoint/vpce-05b56b25b55ebc84d",
            "cidr_blocks": [
              "52.219.32.0/21",
              "3.5.146.0/23",
              "3.5.148.0/22",
              "52.219.40.0/22",
              "52.219.124.0/22",
              "52.219.128.0/21",
              "52.219.184.0/21",
              "16.12.48.0/21",
              "52.219.164.0/22",
              "52.219.180.0/22"
            ],
            "id": "vpce-05b56b25b55ebc84d",
            "owner_id": "810941123870",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6fa54006",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0c4ff97fec289d928"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.s3",
            "service_region": "ap-southeast-1",
            "state": "available",
            "tags": {
              "Name": "api_s3_endpoint_gateway"
            },
            "tags_all": {
              "Name": "api_s3_endpoint_gateway"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0742c6a694106499c"
          },
          "dependencies": [
            "module.pri-rt.aws_route_table.rt",
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcepsg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_security_groups",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810941123870:security-group/sg-0d6c510f8f2ef827b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d6c510f8f2ef827b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "no-rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "vpc-ep-sg",
            "name_prefix": "",
            "owner_id": "810941123870",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-ep-sg",
              "env": "dev"
            },
            "tags_all": {
              "Name": "vpc-ep-sg",
              "env": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0742c6a694106499c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcepsgrule",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow All",
            "from_port": 0,
            "id": "sgrule-1420868715",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d6c510f8f2ef827b",
            "security_group_rule_id": "sgr-0348dee4da018ce77",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_vpc.main",
            "module.vpcepsg.aws_security_group.ec2_security_groups"
          ]
        }
      ]
    },
    {
      "module": "module.vpcepsgrule",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "no-rule",
            "from_port": 0,
            "id": "sgrule-46926812",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d6c510f8f2ef827b",
            "security_group_rule_id": "sgr-0f502c8c702e57449",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_vpc.main",
            "module.vpcepsg.aws_security_group.ec2_security_groups"
          ]
        }
      ]
    }
  ]
}